<resources>

    <string name="app_name"> Lab 2a </string>

    <string name="title"> Лабораторна робота 2а </string>
    <string name="description"> Дослідження нейронних мереж. Модель Perceptron </string>
    <string name="input_P_hint"> Введіть P (за змовчуванням 4) </string>
    <string name="input_x1_hint"> x1 </string>
    <string name="separator"> : </string>
    <string name="input_x2_hint"> x2 </string>
    <string name="more_than_P"> Більше P </string>
    <string name="add_point"> Додати точку </string>
    <string name="add_points_on_assignment"> По завданню </string>
    <string name="clear_points"> Видалити точки </string>
    <string name="select_sigma"> Виберіть швидкість навчання: </string>
    <string name="select_deadline"> Виберіть часовий дедлайн: </string>
    <string name="select_max_iters"> Виберіть максимальну кількість ітерацій: </string>
    <string name="train"> Натренувати </string>
    <string name="train_with_different_sigmas"> Натренувати з різними сігмами </string>
    <string name="check"> OK </string>

</resources>
